# pertest

./: Cargo.toml  index.html
.perseus/: Cargo.toml
.perseus/server/: Cargo.toml
src/: lib.rs
src/templates/: index.rs
