[package]
name = "perseus-example-basic"
version = "0.3.0-beta.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = "0.3.0-beta.4"
sycamore = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# [lib]
# crate-type = ["cdylib", "rlib"]


[dev-dependencies]
fantoccini = "0.17"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
